# open-banking-challenge-background-job

./: .gitignore  README.md  pyproject.toml
src/: app.py  config.py
src/connections/: mongo.py
src/documents/: participant.py
src/functions/: open_banking.py
src/repositories/: nosql_repository.py  participants_repository.py
