[tool.poetry]
name = "open-banking-challenge-background-job"
version = "0.1.0"
description = ""
authors = ["Lnvictor <vh141299@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
APScheduler = "^3.9.1"
pymongo = "^4.2.0"
requests = "^2.28.1"
mongoengine = "^0.24.2"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
